# sync-wh-template

./: .env  .funcignore  .gitignore  all-requirements.txt  function_app.py  pyproject.toml  requirements.txt
common/common_domain/: __init__.py  base_specification.py  dt_converter.py
common/common_domain/entities/: __init__.py  aggregate_root.py  base_entity.py
common/common_domain/events/: __init__.py  domain_event.py  domain_event_publisher.py  domain_event_suscriber.py
common/common_domain/value_object/: __init__.py  base_id.py  dt_id.py  uuid_base_id.py
common/common_infrastructure/cross_cutting/: ConfigurationEnvHelper.py  __init__.py  dt_converter.py  hasher.py
common/common_infrastructure/cross_cutting/geotab_client_api/: geotab_abc.py  geotab_impl.py
common/common_infrastructure/cross_cutting/service_bus/: service_bus_abc.py  service_bus_impl.py
common/common_infrastructure/dataaccess/cosmos/: cosmos_abc.py  cosmos_impl.py
common/common_infrastructure/dataaccess/db_121tower_access/: __init__.py  base.py  constants.py  sa_model_121tower.py  tower121_anywhere_client.py
common/common_infrastructure/dataaccess/db_profit_tools_access/: pt_anywhere_client.py
common/common_infrastructure/dataaccess/db_ware_house_access/: base_model.py  sa_models_whdb.py  whdb_anywhere_client.py
common/common_infrastructure/dataaccess/table_storage/: table_storage_impl.py
src/sync_tmp_events/ETL/: funct_sync_events.py  funct_sync_timmer.py  notifier_abc.py  sync_events_chaged.py  sync_events_updated.py
src/sync_tmp_events/extract/: ExampleExtractInformationImpl.py  ExampleExtractInformationUpdateImpl.py
src/sync_tmp_events/extract/contracts/: IAbstractDTO.py  facade_extract_abc.py
src/sync_tmp_events/load/: load_facade.py
src/sync_tmp_events/transform/: TransformInformationImpl.py  TransformInformationUpdateImpl.py
tests/: test_extract_etl.py  test_sync_tmp_and_events.py
(+181 files in other folders)
