[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Irving Oliva", email = "ioliva@snecorp.com"},
]
dependencies = [
    "azure-functions>=1.11.2",
    "azure-core>=1.24.1",
    "azure-data-tables>=12.4.0",
    "azure-identity>=1.10.0",
    "azure-keyvault-secrets>=4.4.0",
    "azure-eventgrid>=4.8.0",
    "azure-cosmos>=4.3.0",
    "aiohttp>=3.8.1",
    "orjson>=3.7.5",
    "httpx[http2]>=0.23.0",
    "asyncodbc>=0.1.1",
    "sqlanydb>=1.0.11",
    "azure-storage-blob>=12.13.1",
    "twilio>=7.16.4",
    "mygeotab>=0.8.8",
    "sqlalchemy[asyncio]>=2.0.5.post1",
    "alembic>=1.10.1",
    "inflection>=0.5.1",
    "deepdiff>=6.2.3",
    "async-lru>=2.0.2",
    "pandas>=2.1.1",
    "azure-servicebus>=7.11.3",
    "yarl>=1.9.2",
    "numpy>=1.26.1",
    "azure-keyvault>=4.2.0",
    "pymssql>=2.2.10",
]
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "pytest>=7.1.2",
    "pytest-asyncio>=0.18.3",
    "pytest-order>=1.0.1",
    "autoflake>=2.0.0",
]

[tool.isort]
profile = "black"
skip_glob = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".pytest_cache",
    "__pycache__"
]
py_version = 39
line_length = 119

[tool.pdm.scripts]
autoflake = {cmd = "autoflake --in-place -r --remove-unused-variables --remove-all-unused-imports --remove-duplicate-keys",help = "Run autoflake"}
isort = {cmd = "isort", help = "Run isort Formatter"}
black = {cmd = "black --line-length 119", help = "Run Black Formatter"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
